<resources>
    <string name="app_name">TestDemo</string>
    <string name="design_model">设计模式</string>
    <string name="observer_model">观察者模式</string>
    <string name="strategy_model">策略模式</string>
    <string name="proxy_model">代理模式</string>
    <string name="factory_model">工厂模式</string>
    <string name="RecyclerView">RecyclerView</string>
    <string name="custom_view">自定义控件</string>
    <string name="mvp">MVP模式</string>
    <string name="data_binding">DataBinding</string>
    <string name="login">登录</string>
    <string name="weather">天气</string>
    <string name="MaterialDesign">MaterialDesign</string>
    <string name="activity_life_cycle">ActivityLifeCycle</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_leader">LeaderActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
</resources>
