<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_design_model"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.testdemo.ui.activity.DesignModelActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/bt_observer_model"
                style="@style/buttonStyle"
                android:text="@string/observer_model"/>

            <Button
                android:id="@+id/bt_strategy_model"
                style="@style/buttonStyle"
                android:text="@string/strategy_model"/>

            <Button
                android:id="@+id/bt_proxy_model"
                style="@style/buttonStyle"
                android:text="@string/proxy_model"/>

            <Button
                android:id="@+id/bt_factory_model"
                style="@style/buttonStyle"
                android:text="@string/factory_model"/>

        </LinearLayout>


    </ScrollView>


</LinearLayout>
